# djs-compute-xp-boost

./: .gitignore  DEPLOYMENT.md  FRONTEND_SETUP.md  MULTI_API_KEYS.md  QUICKSTART.md  QUICK_SETUP_MULTI_KEYS.md  SYSTEM_OVERVIEW.md  XP BOOST 2025 - Sheet1.csv  package-lock.json  package.json  test-api.html  test-api.js  test-multi-keys.js
app/: globals.css  layout.js  not-found.js  page.js
app/api/: leaderboard.js
app/api/leaderboard/: route.js
app/components/: AboutParty.js  Footer.js  Leaderboard.js  Leaderboard.module.css  Navbar.js
backend/: .gitignore  README.md  app.py  debug_connection.py  pyproject.toml  requirements.txt
